--- a/jemmy/build.xml
+++ b/jemmy/build.xml
@@ -15,7 +15,8 @@
   <property name="testsources" value="testsuite/src"/>
   <property name="testresources" value="testsuite/gui_resource"/>
   <property name="testtimeouts" value="testsuite/jemmy.timeouts"/>
-  <property name="testrundir" value="testsuite/run"/>
+  <property name="testresultdir" value="testsuite/run"/>
+  <property name="testrundir" value="run"/>
   <property name="robot" value="off"/>
 
   <target name="compile">
@@ -82,7 +83,8 @@
            testslocation="${testdatalocation}" 
            resources="${testresources}" 
            timeouts="${testtimeouts}" 
-           resultdir="${testrundir}" 
+           resultdir="${testresultdir}" 
+           rundir="${testrundir}" 
            robotdispatching="${robot}"/>
   </target>
 
