--- a/core.ui/build.xml
+++ b/core.ui/build.xml
@@ -26,9 +26,10 @@ Microsystems, Inc. All Rights Reserved.
     <property name="xmlparser" value="xerces.jar"/>
 
     <target name="compile">
-            <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
+        <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>
                 <pathelement location="../../openide/openide-13javac-workaround.jar"/>
+                <pathelement location="../src/" />
                 <fileset dir="../../openide/netbeans/lib">
                     <include name="openide*.jar" />
                 </fileset>
