bugfix #22151 - welcome panel now uses default colors if no colors are specified in bundle.

--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -29,7 +29,7 @@ HINT_WelcomeName=Welcome name
 PROP_WelcomeItemName=Welcome Item Name
 HINT_WelcomeItemName=New welcome item name
 #Background color of WelcomePanel - Hexadecimal representation of RGB color
-COLOR_WelcomeBACKGROUND=CCCCCC
+#COLOR_WelcomeBACKGROUND=CCCCCC
 LABEL_WelcomeHTMLPages=To get started, choose a task below.
 LABEL_WelcomeTipPages=Tip of the Day
 CTL_CLOSE=Close
