--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -15,7 +15,8 @@ Microsystems, Inc. All Rights Reserved.
 <project name="xml/catalog" default="netbeans" basedir=".">
 
     <property name="xml_root" location=".."/>
-    <property name="core_root" location="../core"/>
+    <property name="api_root" location="${xml_root}/api"/>
+    <property name="core_root" location="${xml_root}/core"/>
 
     <property name="nbroot" location="${xml_root}/.."/>
     <property name="binroot" location="${nbroot}/../nbextra"/>
@@ -44,6 +45,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="buildnumber = ${buildnumber}"/>
 
         <property file="${xml_root}/spec-vers.properties"/>
+        <filter     token="API_SPEC_VERS_SUBST" value="${xml.api.specification.version}"/>
         <filter token="CATALOG_SPEC_VERS_SUBST" value="${xml.catalog.specification.version}"/>
         <filter    token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
@@ -65,7 +67,7 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/> <!-- is covered by above -->
                 <pathelement location="${binroot}/xml/catalog/release/modules/ext/resolver-1_1_nb.jar"/>
                 <pathelement location="${core_root}/src/"/>
-                <pathelement location="../api/src/"/>
+                <pathelement location="${api_root}/src/"/>
             </classpath>
         </javac>
 
