--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -15,6 +15,7 @@ Microsystems, Inc. All Rights Reserved.
 <project name="xml/core" default="netbeans" basedir=".">
 
     <property name="xml_root" location=".."/>
+    <property name="api_root" location="${xml_root}/api"/>
     <property name="tax_root" location="${xml_root}/tax"/>
     <property name="tax_lib_root" location="${tax_root}/lib"/>
 
@@ -47,6 +48,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="buildnumber = ${buildnumber}"/>
 
         <property file="${xml_root}/spec-vers.properties"/>
+        <filter  token="API_SPEC_VERS_SUBST" value="${xml.api.specification.version}"/>
         <filter token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter  token="TAX_SPEC_VERS_SUBST" value="${xml.tax.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
@@ -67,7 +69,7 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="${nbroot}/openidex/netbeans/modules/autoload/openidex.jar"/>
                 <pathelement location="${parserimpl}"/>
                 <pathelement location="${tax_lib_root}/src/"/>
-                <pathelement location="../api/src/"/>
+                <pathelement location="${api_root}/src/"/>
             </classpath>
         </javac>
 
