--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -15,9 +15,10 @@ Microsystems, Inc. All Rights Reserved.
 <project name="xml/tools" default="netbeans" basedir=".">
 
     <property name="xml_root" location=".."/>
-    <property name="tax_root" location="../tax"/>
+    <property name="api_root" location="${xml_root}/api"/>
+    <property name="tax_root" location="${xml_root}/tax"/>
     <property name="tax_lib_root" location="${tax_root}/lib"/>
-    <property name="core_root" location="../core"/>
+    <property name="core_root" location="${xml_root}/core"/>
 
     <property name="nbroot" location="${xml_root}/.."/>
     <property name="binroot" location="${nbroot}/../nbextra"/>
@@ -48,6 +49,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="buildnumber = ${buildnumber}"/>
 
         <property file="${xml_root}/spec-vers.properties"/>
+        <filter   token="API_SPEC_VERS_SUBST" value="${xml.api.specification.version}"/>
         <filter token="TOOLS_SPEC_VERS_SUBST" value="${xml.tools.specification.version}"/>
         <filter  token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter  token="JAXP_SPEC_VERS_SUBST" value="${xml.jaxp.specification.version}"/>
@@ -69,7 +71,7 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="${core_root}/src/"/>
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${jaxp-transform}"/> <!-- JAXP/transform API -->
-                <pathelement location="../api/src/"/>
+                <pathelement location="${api_root}/src/"/>
                 <!--Servlet API-->
                 <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar" />
                 <!--TransformServlet: HttpServerSettings-->
