#23249: MemoryMeterAction's name does not come from Bundle.properties

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -202,3 +202,6 @@ MSG_attr_change_error=Could not change attributes of the {0} file.
 
 #ProjectCloseAction
 LBL_ProjectCloseAction=Close Project
+
+#MemoryMeterAction
+CTL_MemoryMeterAction=Memory Meter
