Changed a message (for the case that no class could be redefined).

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -318,3 +318,6 @@ MSG_Unsupported_class_definition_changes=The remote JVM is not able to handle so
 
 #Displayed in the Output Window in case that action "Fix" was successful.
 MSG_Redefined_classes=The following classes were fixed:
+
+#Displayed in the Output Window in case that the debugger could not find any ReferenceType to be redefined.
+MSG_No_class_redefined=No class was fixed because none of classes to be fixed was loaded in the remote VM.
