#22915: module enablement/disablement confirmation dialog was ugly.

--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -162,13 +162,14 @@ Services/Browsers/SwingBrowser.ser=Swing HTML Browser
 HINT_workplace_node=Workplace contains all opened projects
 LBL_workplace_node=Workplace
 
-# ModuleBean
+# ModuleBean & ModuleEnableDisablePanel
 MB_MSG_in_order_to_disable=In order to disable the following modules:
 MB_MSG_must_also_disable=you must also disable these modules:
 MB_TITLE_disabling=Disabling Modules Used by Others...
 MB_MSG_in_order_to_enable=In order to enable the following modules:
 MB_MSG_must_also_enable=you must also enable these modules:
 MB_TITLE_enabling=Enabling Modules Depending on Others...
+MB_selected_module_desc=Description of selected module:
 
 # ModuleNode
 CTL_Modules_name=Modules
