Implementing the minor code completion features: 21478 - Mark deprecated members in code completion 21479 - alternate icon for the local variables 21481 - immediate code completion substitution (option)

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -54,6 +54,9 @@ HINT_completionAutoPopup=If True, the completion window automatically appears wh
 PROP_completionCaseSensitive=Case Sensitive Code Completion
 HINT_completionCaseSensitive=If True, the completion query search will be case sensitive
 
+PROP_completionInstantSubstitution=Code Completion Instant Substitution
+HINT_completionInstantSubstitution=If True, invocation of code completion perform instant substitution, if the search result contains only one item
+
 PROP_completionAutoPopupDelay=Delay of Completion Window Auto Popup
 HINT_completionAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the completion window.
 
@@ -75,8 +78,8 @@ HINT_javaDocAutoPopup=If True, the javaDoc window automatically appears when app
 PROP_updatePDAfterMounting=Update Code Completion Database After Mounting
 HINT_updatePDAfterMounting=Mounted filesystem will be added into the Code Completion Database.
 
-PROP_parserDatabaseCustomizer=Code Completion Database Customizer
-HINT_parserDatabaseCustomizer=Code Completion Database Customizer
+PROP_showDeprecatedMembers=Show Deprecated Members in Code Completion
+HINT_showDeprecatedMembers=If True, deprecated members are shown in code completion.
 
 PROP_expandTabs=Expand Tabs to Spaces
 HINT_expandTabs=If True, automatically converts tabs in the document to spaces padded to the same column.
