--- a/core.execution/build.xml
+++ b/core.execution/build.xml
@@ -23,7 +23,7 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
     <property name="binroot" location="../../../nbextra"/>
-    <property name="xmlparser" value="xerces.jar"/>
+    <property name="xml-apis" value="xml-apis.jar"/>
 
     <target name="compile">
     <!--
@@ -34,7 +34,7 @@ Microsystems, Inc. All Rights Reserved.
                     <include name="openide*.jar" />
                 </fileset>
                 <pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
-                <pathelement location="${binroot}/core/release/lib/ext/${xmlparser}"/>
+                <pathelement location="${binroot}/core/release/lib/ext/${xml-apis}"/>
                 <pathelement location="${binroot}/core/release/lib/ext/jh.jar"/>
             </classpath>
         </javac>
