--- a/core.ide/build.xml
+++ b/core.ide/build.xml
@@ -24,7 +24,7 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
     <property name="binroot" location="../../../nbextra"/>
-    <property name="xmlparser" value="xerces.jar"/>
+    <property name="xml-apis" value="xml-apis.jar"/>
 
     <target name="compile">
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
@@ -35,7 +35,7 @@ Microsystems, Inc. All Rights Reserved.
                 </fileset>
 				<pathelement location="../netbeans/lib/core.jar"/>
                 <pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
-                <pathelement location="${binroot}/core/release/lib/ext/${xmlparser}"/>
+                <pathelement location="${binroot}/core/release/lib/ext/${xml-apis}"/>
 <!--                <pathelement location="${binroot}/core/release/lib/ext/jh.jar"/> -->
             </classpath>
         </javac>
