--- a/o.n.core/build.xml
+++ b/o.n.core/build.xml
@@ -16,7 +16,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
   <property name="binroot" location="../../nbextra"/>
-  <property name="xmlparser" value="xerces.jar"/>
+  <property name="xml-apis" value="xml-apis.jar"/>
 
   <target name="compile">
     <javac srcdir="libsrc" destdir="libsrc" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">    
@@ -27,7 +27,7 @@ Microsystems, Inc. All Rights Reserved.
         </fileset>
         <pathelement location="${binroot}/core/release/lib/ext/regexp.jar"/>
         <pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
-        <pathelement location="${binroot}/core/release/lib/ext/${xmlparser}"/>
+        <pathelement location="${binroot}/core/release/lib/ext/${xml-apis}"/>
       </classpath>
     </javac>
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
@@ -38,7 +38,7 @@ Microsystems, Inc. All Rights Reserved.
         </fileset>
         <pathelement location="${binroot}/core/release/lib/ext/regexp.jar"/>
         <pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
-        <pathelement location="${binroot}/core/release/lib/ext/${xmlparser}"/>
+        <pathelement location="${binroot}/core/release/lib/ext/${xml-apis}"/>
         <pathelement location="libsrc"/>
       </classpath>
     </javac>
