--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -24,8 +24,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="binroot" location="${nbroot}/../nbextra"/>
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
 
-    <property name="parserimpl" value="${binroot}/xml/tax/release/modules/ext/xerces2.jar"/> <!-- parser implementation used internally by module -->
-    <property name="jaxp-transform" value="${binroot}/xml/libs/xalan/release/modules/autoload/ext/jaxp-transform-1.1.2.jar"/>
+    <property name="xml-apis" location="${binroot}/core/release/lib/ext/xml-apis.jar" />
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="xml.netbeans.org"/>
@@ -52,7 +51,6 @@ Microsystems, Inc. All Rights Reserved.
         <filter   token="API_SPEC_VERS_SUBST" value="${xml.api.specification.version}"/>
         <filter token="TOOLS_SPEC_VERS_SUBST" value="${xml.tools.specification.version}"/>
         <filter  token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
-        <filter  token="JAXP_SPEC_VERS_SUBST" value="${xml.jaxp.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
@@ -67,15 +65,12 @@ Microsystems, Inc. All Rights Reserved.
                 <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
-                <pathelement location="${parserimpl}"/> <!-- JAXP and SAX dependency -->
+                <pathelement location="${xml-apis}"/> <!-- JAXP and SAX dependency -->
                 <pathelement location="${core_root}/src/"/>
                 <pathelement location="${tax_lib_root}/src/"/>
-                <pathelement location="${jaxp-transform}"/> <!-- JAXP/transform API -->
                 <pathelement location="${api_root}/src/"/>
                 <!--Servlet API-->
                 <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar" />
-                <!--TransformServlet: HttpServerSettings-->
-<!--                <pathelement location="${nbroot}/httpserver/netbeans/modules/httpserver.jar" />-->
             </classpath>
         </javac>
     </target>
