Integrated #16856 - Mount JavaDoc for JAXP, SAX and DOM. Finished #16962 - Bundle SAX, DOM and JAXP binaries.

--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -89,6 +89,9 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="release">
+        <copy todir="netbeans" includeEmptyDirs="false">
+            <fileset dir="release" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
+        </copy>
     </target>
 
     <target name="javahelp">
