--- a/xml.tools/src/org/netbeans/modules/xml/tools/resources/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/resources/Bundle.properties
@@ -17,3 +17,4 @@ OpenIDE-Module-Long-Description=The module contains various actions, generators 
 
 ## mf-layer.xml
 Mount/java/org-netbeans-modules-xml-tools-resources-xml_apis.xml=Standard XML APIs (JAXP, DOM, SAX) Library
+Mount/Javadoc/org-netbeans-modules-xml-tools-resources-xml_apis.xml=Standard XML APIs (JAXP, DOM, SAX) Javadoc
