--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -963,6 +963,10 @@ PROP_AT_USE_HIGHLIGHT=Use Highlight Color
 HINT_AT_USE_HIGHLIGHT=If True, the highlight color is used.
 PROP_AT_FOREGROUND=Foreground Color
 HINT_AT_FOREGROUND=Color of the text.
+PROP_AT_WAVEUNDERLINE=Wave Underline Color
+HINT_AT_WAVEUNDERLINE=Color of the wave underline.
+PROP_AT_USE_WAVEUNDERLINE=Use Wave Underline
+HINT_AT_USE_WAVEUNDERLINE=If True, the wave underline is used.
 PROP_AT_INHERIT_FOREGROUND=Inherit Foreground Colors
 HINT_AT_INHERIT_FOREGROUND=If True, the foreground color is used.
 PROP_AT_WHOLELINE=Whole Line
