Node descriptions implemented.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -938,3 +938,23 @@ Actions/Help/org-netbeans-modules-db-mainpage.xml=Database Explorer Module Help
 
 # Options
 Services/org-netbeans-modules-db-explorer-DatabaseOption.settings=Database Explorer
+
+# Node Descriptions
+ND_AdaptorList=List of DatabaseMetaData Adaptors
+ND_Column=Column
+ND_Connection=Database Connection
+ND_DriverList=List of Driver Templates
+ND_Driver=Driver Template
+ND_ForeignKey=Foreign Key
+ND_Index=Index
+ND_PrimaryKey=Primary Key
+ND_ProcedureList=List of Stored Procedures
+ND_Procedure=Stored Procedure
+ND_ProcedureParam=Stored Procedure Parameter
+ND_Root=Database Explorer Module Home
+ND_TableList=List of Tables
+ND_Table=Table
+ND_ViewList=List of Views
+ND_View=View
+ND_ForeignKeyList=List of Foreign Keys
+ND_IndexList=List of Indexes
