Implementing the minor code completion feature: #21480 - option for non case-sensitive and case-sensitive alphabetized code completion members

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -54,6 +54,9 @@ HINT_completionAutoPopup=If True, the completion window automatically appears wh
 PROP_completionCaseSensitive=Case Sensitive Code Completion
 HINT_completionCaseSensitive=If True, the completion query search will be case sensitive
 
+PROP_completionNaturalSort=Code Completion Natural Sort
+HINT_completionNaturalSort=If True, the completion search results will be sorted naturally
+
 PROP_completionInstantSubstitution=Code Completion Instant Substitution
 HINT_completionInstantSubstitution=If True, invocation of code completion perform instant substitution, if the search result contains only one item
 
