--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -57,6 +57,9 @@ HINT_completionCaseSensitive=If True, the completion query search will be case s
 PROP_completionNaturalSort=Code Completion Natural Sort
 HINT_completionNaturalSort=If True, the completion search results will be sorted naturally
 
+PROP_fastImportPackage=Fast Import Package
+HINT_fastImportPackage=If True, fast import dialog will offer packages
+
 PROP_completionInstantSubstitution=Code Completion Instant Substitution
 HINT_completionInstantSubstitution=If True, invocation of code completion perform instant substitution, if the search result contains only one item
 
