When the tools/options dialog is opened for the first time the nodes with cathegories are expanded so it is much easier to find out where the settings one is looking for is

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -205,3 +205,5 @@ LBL_ProjectCloseAction=Close Project
 
 #MemoryMeterAction
 CTL_MemoryMeterAction=Memory Meter
+
+MSG_Preparing_options=Preparing options...
