The Patch algorithm implemented. Also parsing of context-diff patches done. A special "PatchAction" added for purpose of patch application. This is a fix of issue #21191.

--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -29,6 +29,16 @@ Services/DiffVisualizers=Diff Visualizers
 CTL_DiffActionName=Diff
 CTL_DiffSettings=Diff Settings
 
+# PatchAction
+CTL_PatchActionName=Patch...
+EXC_PatchParsingFailed=Parsing of the patch file failed: {0}
+TITLE_SelectPatch=Select The Patch File
+BTN_Patch=Patch
+BTN_Patch_mnc=P
+BTN_Patch_tooltip=Select the patch file to apply.
+EXC_PatchApplicationFailed=Application of the patch failed: {0}
+EXC_CopyOfAppliedPatchFailed=Copy of the applied patch failed ({0}). The applied file is at {1}.
+
 # DiffSettingsBeanInfo
 PROP_diffService=Default Diff Service
 HINT_diffService=The default diff used to compute and display file differences
