--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -69,17 +69,17 @@ HINT_completionAutoPopupDelay=How long to wait (in milliseconds) before automati
 PROP_displayGoToClassInfo=Display Go To Class Info Window
 HINT_displayGoToClassInfo=If true, Info Window will be displayed before Go To Class feature.
 
-PROP_javaDocBGColor=Background Color of JavaDoc Popup Window
-HINT_javaDocBGColor=Background color of javadoc popup window
+PROP_javaDocBGColor=Background Color of Javadoc Popup Window
+HINT_javaDocBGColor=Background color of Javadoc popup window
 
-PROP_javaDocAutoPopupDelay=Delay of JavaDoc Window Auto Popup
-HINT_javaDocAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the javaDoc window.
+PROP_javaDocAutoPopupDelay=Delay of Javadoc Window Auto Popup
+HINT_javaDocAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the Javadoc window.
 
-PROP_javaDocPreferredSize=JavaDoc Preferred Size
-HINT_javaDocPreferredSize=Preferred size of javaDoc popup window.
+PROP_javaDocPreferredSize=Javadoc Preferred Size
+HINT_javaDocPreferredSize=Preferred size of Javadoc popup window.
 
-PROP_javaDocAutoPopup=Auto Popup JavaDoc Window
-HINT_javaDocAutoPopup=If True, the javaDoc window automatically appears when appropriate.
+PROP_javaDocAutoPopup=Auto Popup Javadoc Window
+HINT_javaDocAutoPopup=If True, the Javadoc window automatically appears when appropriate.
 
 PROP_updatePDAfterMounting=Update Code Completion Database After Mounting
 HINT_updatePDAfterMounting=Mounted filesystem will be added into the Code Completion Database.
