Show project name of an Ant build script in the tool tip & mini status bar rather than in the display name. Better use of visual space.

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
@@ -29,9 +29,9 @@ HINT_project_properties=Properties loaded from an ant.properties file. Click ...
 LBL_unknown_datatype=Unknown datatype <{0}/>
 
 # AntProjectNode
-# {0} - base name of script file
-# {1} - project name
-LBL_script_display_name={0} [{1}]
+# {0} - project name
+LBL_named_script_description={0} [Ant project]
+LBL_anon_script_description=Anonymous Ant project
 MSG_target_name_changeme=changeme
 MSG_property_name_changeme=changeme
 MSG_property_value_changeme=somevalue
