Added toolbar visibility customization

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -166,6 +166,8 @@ HINT_textLimitWidth=Count of characters after which the text limit line is displ
 PROP_base_keyBindingList=Global Key Bindings
 HINT_base_keyBindingList=Actions bound to shortcut keys for all editor types.
 
+PROP_base_toolbarVisible=Toolbar Visible
+HINT_base_toolbarVisible=If True, display the editor toolbar.
 
 
 # Component colorings related stuff
