--- a/form/src/org/netbeans/modules/form/actions/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/actions/Bundle.properties
@@ -20,6 +20,7 @@ ACT_Events=Events
 ACT_CustomizeLayout=Customize Layout...
 ACT_SelectLayout=Set Layout
 ACT_TestMode=Test Form
+ACT_ReloadForm=Reload Form
 ACT_ShowGrid=Show Grid
 ACT_FormEditor=&Form Editor
 ACT_InstallBean=Insta&ll New JavaBean...
